---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}

```

## `file.js`

```js
let a = !b || !c
```

# Termination Message

```block
some errors were emitted while running checks
```

# Emitted Messages

```block
file.js:1:9 lint/complexity/useSimplifiedLogicExpression  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Logical expression contains unnecessary complexity.
  
  > 1 │ let a = !b || !c
      │         ^^^^^^^^
  
  i Suggested fix: Reduce the complexity of the logical expression.
  
  - let·a·=·!b·||·!c
  + let·a·=·!(b·&&·c)
  

```

```block
file.js:1:1 lint/nursery/useConst  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This 'let' declares a variable which is never re-assigned.
  
  > 1 │ let a = !b || !c
      │ ^^^
  
  i 'a' is never re-assigned.
  
  > 1 │ let a = !b || !c
      │     ^
  
  i Suggested fix: Use 'const' instead.
  
  - let·a·=·!b·||·!c
  + const·a·=·!b·||·!c
  

```

```block
Checked 1 file(s) in <TIME>
```


